syntax = "proto3";
package transport;

import "internal/common/message.proto";

option go_package = "github.com/exc-git/mini-kv-store/internal/transport/rpc";

service KVStore {
  rpc Get (GetRequest) returns (GetResponse);
  rpc Set (SetRequest) returns (SetResponse);
  rpc SetWithTTL (SetRequest) returns (SetResponse);
  rpc Join (common.JoinRequest) returns (common.JoinResponse);
  rpc Stats (common.StatsRequest) returns (common.StatsResponse);
  rpc Delete (DeleteRequest) returns (DeleteResponse);
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  string value = 1;
}

message SetRequest {
  string key = 1;
  string value = 2;
  int64 ttl = 3; // in seconds
}

message SetResponse {
  bool success = 1;
}

message DeleteRequest {
  string key = 1;
}

message DeleteResponse {
  bool success = 1;
}